# swf-transform

./: README.md  build.sh  pyproject.toml
lib/swf_transform/prompt/: payload_process.py  payload_process_zmq.py  transformer.py  utils.py
lib/swf_transform/prompt/brokers/: activemq.py
tools/prompt/make/: make.sh
wrapper/: eicrecon_process.sh
