[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "swf-transform"
version = "2.0.0"
description = "Worker wrapper to process STF slice messages and forward results into the Panda pipeline."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "IRIS-HEP Team" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
  "stomp.py",
  "idds-common==2.3.5",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "lib"

[tool.setuptools.packages.find]
where = ["lib"]
include = ["swf_transform*"]
